force-app/main/default/objects/Meta_Ad__c/Meta_Ad__c.object-meta.xml
<CustomObject>
    <description>Meta advertising ad synchronized by QuickBridge for attribution and reporting.</description>
    <label>Meta Ad</label>
    <nameField>
        <label>Meta Ad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>