force-app/main/default/objects/Meta_Ad__c/fields/Creative_Id__c.field-meta.xml
<CustomField>
    <fullName>Creative_Id__c</fullName>
    <label>Creative Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>