force-app/main/default/objects/Meta_Ad__c/fields/Meta_Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_Id__c</fullName>
    <externalId>true</externalId>
    <label>Meta Ad Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>