force-app/main/default/objects/Meta_Ad__c/fields/Meta_Ad_Set__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta Ad Set</label>
    <referenceTo>Meta_Ad_Set__c</referenceTo>
    <relationshipLabel>Meta Ads</relationshipLabel>
    <relationshipName>Meta_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>