force-app/main/default/objects/Meta_Ad__c/fields/Post_Id__c.field-meta.xml
<CustomField>
    <fullName>Post_Id__c</fullName>
    <label>Post Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>