force-app/main/default/objects/Meta_Ad__c/fields/Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Preview_URL__c</fullName>
    <label>Preview URL</label>
    <type>Url</type>
</CustomField>