force-app/main/default/objects/Meta_Ad__c/listViews/All_Meta_Ads.listView-meta.xml
<ListView>
    <fullName>All_Meta_Ads</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Meta Ads</label>
</ListView>